# QuOCS-thesuite

./: .gitignore  README.md  quocs-suite.py  setup.cfg
examples/: OneQubitClass.py  RosenbrockClass.py  manual_test_dCRAB.json  manual_test_pure_parametrization.json  test_dCRAB.json  test_pure_parametrization.json
quocs/: suite.py
tests/: OneQubitClass.py  quocs-suite.py  test_dCRAB.json  test_pure_parametrization.json
