[metadata]
name = quocs-thesuite
version = 0.0a1
author = QuOCS Team
author_email = quantum.optimal.cs@gmail.com
description = QuOCS (Quantum Optimal Control Suite)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantum-OCS/QuOCS-thesuite
project_urls =
    Bug Tracker = https://github.com/Quantum-OCS/QuOCS-thesuite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = quocs
python_requires = >=3.6
install_requires =
    quocs-lib @ git+https://github.com/Quantum-OCS/QuOCS#egg=quocslib
    quocs-pyside2interface @ git+https://github.com/Quantum-OCS/QuOCS-pyside2interface#egg=quocspyside2interface

[options.entry_points]
console_scripts =
    quocs = quocs.suite:main
